[package]
name = "concurrent-initializer"
version = "0.5.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossbeam-epoch = { version = "0.9.9" }
num_cpus = "1.13"
parking_lot = "0.12"
[dev-dependencies]
assert_matches = "1.5"
